# file_to_map

./: Cargo.toml  README.md
src/: lib.rs  test.rs
tests_files/: key_val_sep.txt  pair_sep.txt  separators_change.txt
