[package]
name = "file_to_map"
version = "0.1.0"
authors = ["Roey Fuchs <fuchsroey@gmail.com>"]
edition = "2018"
description = "A small parser for using data from a file as a map"
license = "MIT"
repository = "https://github.com/RoeyFuchs/file_to_map"
keywords = ["parser", "map", "file", "configuration"]
categories = ["parsing", "filesystem", "data-structures", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
